# skillviz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
examples/: demo-graph.html  generate_demo.py  index.html
src/skillviz/: __init__.py  cli.py  graph.py  html_renderer.py  menubar.py  scanner.py
tests/: conftest.py  test_graph.py  test_html_renderer.py  test_menubar.py  test_scanner.py
