[project]
name = "skillviz"
version = "0.1.0"
description = "SkillViz - Visualize Claude Code skills as a graph"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "graphviz>=0.20",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[project.scripts]
skillviz = "skillviz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
