[project]
name = "skillviz"
dynamic = ["version"]
description = "SkillViz - Visualize Claude Code skills as a graph"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "graphviz>=0.20",
    "pyyaml>=6.0",
    "rumps>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[project.scripts]
skillviz = "skillviz.cli:main"
skillviz-menubar = "skillviz.menubar:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/skillviz/_version.py"
